# status-line

./: .gitignore  CMakeLists.txt  README.md  text.txt  todo.md
src/: ansi.h  git_functions.c  git_functions.h  main.c  text_formatting.c  text_formatting.h
tests/: test.c
